--- a/TriadApp/templates/TriadApp/admin/supply_management.html
+++ b/TriadApp/templates/TriadApp/admin/supply_management.html
@@ -37,7 +37,7 @@
                         <th class="px-6 py-4 text-left text-sm font-semibold">Supply ID</th>
                         <th class="px-6 py-4 text-left text-sm font-semibold">Name</th>
                         <th class="px-6 py-4 text-left text-sm font-semibold">Description</th>
-                        <th class="px-6 py-4 text-left text-sm font-semibold">Servings Per Supply</th>
+                        <th class="px-6 py-4 text-left text-sm font-semibold">Quantity/Servings Per Supply</th>
                         <th class="px-6 py-4 text-left text-sm font-semibold">Cost</th>
                         <th class="px-6 py-4 text-left text-sm font-semibold">Supplier</th>
                         <th class="px-6 py-4 text-left text-sm font-semibold">Date Added</th>
